--- a/63CNTT5N1/63CNTT5N1/Areas/Admin/Views/Supplier/Edit.cshtml
+++ b/63CNTT5N1/63CNTT5N1/Areas/Admin/Views/Supplier/Edit.cshtml
@@ -7,7 +7,7 @@
 
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Supplier", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -31,7 +31,7 @@
                             </div>
 
                             <div class="col-md-6 text-right">
-                                <a href="@Url.Action("Index","Category")" class="btn-sm btn-info"><i class="fa fa-long-arrow-alt-left"></i> Quay lại</a>
+                                <a href="@Url.Action("Index","Supplier")" class="btn-sm btn-info"><i class="fa fa-long-arrow-alt-left"></i> Quay lại</a>
                             </div>
                         </div>
                     </div><!--card-header-->
